# sammy

./: Cargo.toml  LICENSE  test.sh
src/: config.rs  main.rs
src/cli/: check.rs  mod.rs  update.rs
src/cli/command/: check.rs  mod.rs  update.rs  woof.rs
src/utils/: mod.rs  repository.rs
